adjusts hero positioning and overflowing issue in story page

--- a/src/App.css
+++ b/src/App.css
@@ -75,7 +75,8 @@
   font-family: ''; }
   @media (max-width: 767.98px) {
     .hero-image {
-      height: 500px !important; } }
+      height: 500px !important;
+      background-position: center bottom; } }
   .hero-image .intro-text {
     font-family: "Amatic SC", cursive, Arial, Helvetica, sans-serif;
     font-size: 1.5rem;
@@ -639,10 +640,12 @@ footer {
 .story-page .story-content {
   -webkit-box-shadow: 0px -22px 36px -27px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px -22px 36px -27px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px -22px 36px -27px rgba(0, 0, 0, 0.75);
-  padding: 20px 0; }
+  box-shadow: 0px -22px 36px -27px rgba(0, 0, 0, 0.75); }
   .story-page .story-content .row {
-    padding: 20px 40px; }
+    padding-top: 20px; }
+    @media (min-width: 768px) {
+      .story-page .story-content .row {
+        padding: 20px 40px; } }
     .story-page .story-content .row .text {
       text-align: left;
       width: 320px; }
@@ -660,7 +663,8 @@ footer {
         font-size: 0.8rem; }
     .story-page .story-content .row .image {
       background-size: cover;
-      min-height: 300px; }
+      min-height: 300px;
+      max-width: 100vw; }
       .story-page .story-content .row .image.the-name {
         background-image: url("images/portraits/marseille.png"); }
       .story-page .story-content .row .image.early-history {
