--- a/src/components/HeroImage/_HeroImage.scss
+++ b/src/components/HeroImage/_HeroImage.scss
@@ -10,6 +10,7 @@
     font-family: '';
     @include media-breakpoint-down(sm) {
         height: 500px !important;
+        background-position: center bottom;
     }
 
     .intro-text {
