--- a/src/components/Story/_Story.scss
+++ b/src/components/Story/_Story.scss
@@ -19,9 +19,12 @@
         -webkit-box-shadow: 0px -22px 36px -27px rgba(0,0,0,0.75);
         -moz-box-shadow: 0px -22px 36px -27px rgba(0,0,0,0.75);
         box-shadow: 0px -22px 36px -27px rgba(0,0,0,0.75);
-        padding: 20px 0;
+
         .row {
-            padding: 20px 40px;
+            padding-top: 20px;
+            @include media-breakpoint-up(md){
+                padding: 20px 40px;
+            }
             .text {
                 text-align: left;
                 width: 320px;
@@ -44,6 +47,8 @@
             .image {
                 background-size: cover;
                 min-height: 300px;
+                max-width: 100vw;
+                
                 &.the-name {
                     background-image: url("images/portraits/marseille.png")
                 }
